# Ouroboros

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .ruff.toml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci-action-ros.yaml  ci-action.yml
VPR_models/: CliqueMining.py  __init__.py
configs/: supercloud_config.py
doc/: conf.py  index.rst
doc/api/: core.rst  opengv.rst
examples/: SpinKimeraMulti.py  config_example.py  lightglue_example.py  place_descriptor_debugging.py  salad_example.py  superpoint_example.py  uhumans_example_batch.py  vlc_server_driver_example.py  vlc_server_example.py
examples/config/: example_config.yaml  gt_vlc_server_config.yaml  lightglue_config.yaml  pose_recovery_config.yaml  salad_config.yaml  superpoint_config.yaml  vlc_driver_config.yaml  vlc_server_config.yaml
extra/ouroboros_msgs/: CMakeLists.txt
extra/ouroboros_msgs/msg/: SparkImageMsg.msg  VlcImageMetadataMsg.msg  VlcImageMsg.msg  VlcInfoMsg.msg
extra/ouroboros_msgs/srv/: VlcInfo.srv  VlcKeypointQuery.srv
extra/ouroboros_ros/: CMakeLists.txt  setup.py
extra/ouroboros_ros/cfg/: PlaceDescriptorDebugging.cfg
extra/ouroboros_ros/config/: gt_vlc_server_config.yaml  vlc_server_config.yaml  vlc_server_node.yaml
extra/ouroboros_ros/launch/: ground_truth_lc_node.launch  place_descriptor_debugging.launch  vlc_multirobot_server_node.launch  vlc_server_node.launch
extra/ouroboros_ros/msg/: VlcImageMsg.msg
extra/ouroboros_ros/nodes/: ground_truth_lc_node.py  place_matching_example.py  vlc_server_node.py
extra/ouroboros_ros/src/ouroboros_ros/: __init__.py  conversions.py  utils.py  vlc_multirobot_server_ros.py  vlc_server_ros.py  vlc_server_ros_display.py
extra/ouroboros_ros/tests/: test_conversions.py
loading/: ModelLoader.py
ouroboros/: pyproject.toml
ouroboros/src/ouroboros/: __init__.py
ouroboros/src/ouroboros/utils/: plotting_utils.py
ouroboros/src/ouroboros/vlc_db/: camera_table.py  spark_image.py  vlc_image.py  vlc_lc_table.py
ouroboros/src/ouroboros/vlc_server/: vlc_server.py
ouroboros/src/ouroboros_gt/: gt_matches.py  gt_place_recognition.py  gt_pose_recovery.py
ouroboros/src/ouroboros_keypoints/: lightglue_interface.py
ouroboros/src/ouroboros_opengv/: pose_recovery.py
ouroboros/src/ouroboros_salad/: salad_model.py
ouroboros/tests/: conftest.py  test_opengv_interface.py  test_vlc_db.py
ouroboros_msgs/: CMakeLists.txt  package.xml
ouroboros_msgs/msg/: VlcInfoMsg.msg
ouroboros_ros/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ouroboros_ros/config/: ground_truth_lc_node.yaml  vlc_server_config.yaml  vlc_server_node.yaml
ouroboros_ros/launch/: vlc_server_node.launch.yaml
ouroboros_ros/nodes/: ground_truth_lc_node.py  place_matching_example.py  vlc_multirobot_server_node.py  vlc_server_node.py
ouroboros_ros/rviz/: ouroboros_debug.rviz
ouroboros_ros/src/ouroboros_ros/: __init__.py  place_matching_example_node.py  session_manager.py  utils.py  vlc_multirobot_server_node.py  vlc_multirobot_server_ros.py  vlc_server_node.py  vlc_server_ros.py
ouroboros_ros/src/ouroboros_ros/server/: __init__.py  conversions.py  utils.py  vlc_multirobot_server_ros.py  vlc_server_ros.py
ouroboros_ros/src/ouroboros_ros/servers/: conversions.py  vlc_multirobot_server_ros.py  vlc_server_ros.py
ouroboros_ros/tests/: setup_tests.py  test_conversions.py
ouroboros_superglue/: setup.py
ouroboros_superglue/examples/: ouroboros_superglue_example.py
ouroboros_superglue/src/ouroboros_superglue/: superglue_model.py
resources/: example_config.yaml
src/: CMakeLists.txt
src/ouroboros/: __init__.py  config.py  pose_recovery.py
src/ouroboros-keypoint-match/: README.md
src/ouroboros-keypoint-match/common/: keypoint_matcher.py  matcher_base.py
src/ouroboros-keypoint-match/lightglue/: lightglue_matcher.py  superpoint.py
src/ouroboros-keypoint-match/notebooks/: LightSuperGlueComparison.ipynb
src/ouroboros-keypoint-match/superglue/: matching.py  superglue.py  superglue_matcher.py  superpoint.py  utils.py
src/ouroboros-opengv/: _bindings.cpp
src/ouroboros/superglue/: README.md
src/ouroboros/utils/: plotting_utils.py
src/ouroboros/vlc_db/: __init__.py  camera.py  invertible_vector_store.py  spark_loop_closure.py  vlc_db.py  vlc_image.py  vlc_image_table.py  vlc_pose.py  vlc_session_table.py
src/ouroboros/vlc_server/: vlc_server.py
src/ouroboros_gt/: __init__.py  gt_descriptors.py  gt_keypoint_detection.py  gt_matches.py  gt_place_recognition.py  gt_pose_recovery.py
src/ouroboros_keypoints/: __init__.py  lightglue_interface.py  superpoint_interface.py
src/ouroboros_opengv/: __init__.py  _bindings.cpp  pose_recovery.py
src/ouroboros_salad/: README.md  __init__.py  salad_model.py
src/ouroboros_superglue/: superglue_model.py
src/vlc_db/: setup.py  vlc_image_table.py
src/vlc_db/src/vlc_db/: vlc_db.py
tests/: conftest.py  test_config.py  test_opengv_interface.py  test_pose_recovery.py  test_vector_store.py  test_vlc_db.py  test_vlc_pose.py
tests/vlc_db/: test_db.py
vlc_db/: setup.py  spark_image.py  spark_loop_closure.py  vlc_db.py  vlc_image.py  vlc_image_table.py  vlc_session_table.py
vlc_db/src/vlc_db/: gt_lc_utils.py  invertible_vector_store.py  spark_image.py  spark_loop_closure.py  spark_session.py  utils.py  vlc_db.py  vlc_image.py  vlc_image_table.py  vlc_lc_table.py  vlc_session_table.py
vlc_db/tests/: test_db.py
vlc_resources/: setup.py
