[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "ouroboros"
description="Modules and tools for visual loop closure pipelines"
version = "0.0.1"
authors = [
  {name = "Aaron Ray", email = "aaronray@mit.edu"},
  {name = "Nathan Hughes", email = "na26933@mit.edu"},
  {name = "Yun Chang", email = "yunchang@mit.edu"},
]
dependencies = [
    "numpy",
    "imageio",
    "matplotlib",
    "opencv-python",
    "pyyaml",
    "pytest",
    "scipy>=1.4.0",
    "spark_config @ git+https://github.com/MIT-SPARK/Spark-Config@main",
]

[tool.scikit-build]
cmake.source-dir = "src"
wheel.packages = [
    "src/ouroboros",
    "src/ouroboros_gt",
    "src/ouroboros_keypoints",
    "src/ouroboros_opengv",
    "src/ouroboros_salad",
]

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = "tests"
addopts = ["--cov-report=term-missing"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
