<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouroboros_ros</name>
  <version>2.0.0</version>
  <description>ROS interface for Ouroboros VLC Server</description>
  <maintainer email="aaronray@mit.edu">Aaron Ray</maintainer>

  <license>MIT</license>

  <depend>ouroboros_msgs</depend>
  <depend>rclpy</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
      <build_type>ament_python</build_type>
  </export>
  
</package>
