<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouroboros_ros</name>
  <version>2.0.0</version>
  <description>ROS interface for Ouroboros VLC Server</description>
  <maintainer email="aaronray@mit.edu">Aaron Ray</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ouroboros_msgs</depend>
  <depend>rclpy</depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
  
</package>
